--- a/react/paybird/package.json
+++ b/react/paybird/package.json
@@ -16,7 +16,12 @@
     "@lit-labs/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.4",
+    "chroma-js": "^3.1.2",
+    "dom-to-image": "^2.6.0",
+    "dom-to-image-more": "^3.5.0",
+    "html2canvas": "^1.4.1",
     "lit": "^3.2.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
