--- a/react/paybird/package.json
+++ b/react/paybird/package.json
@@ -35,6 +35,7 @@
 		"react-router-dom": "^7.1.5",
 		"react-scroll": "^1.9.3",
 		"react-toastify": "^11.0.3",
+		"swiper": "^11.2.5",
 		"tailwind-scrollbar-hide": "^2.0.0",
 		"tailwindcss": "^4.0.4",
 		"web-vitals": "^4.2.4"
